# databao-agent

./: .env.example  .gitignore  Makefile  README.md  demo.ipynb  demo.py  hatch_build.py  pyproject.toml  requirements.txt  test.ipynb
.github/workflows/: pre-commit.yml  pytest.yml
client/: .gitignore  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.d.mts
client/multimodal/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/multimodal-html/: package.json  project.json  vite.config.ts
client/multimodal-jupiter/: index.html  package.json  project.json  vite.config.ts
client/multimodal-mcp-ui/: index.html  package.json  tsconfig.json  vite.config.ts
databao/: __init__.py  _config_utils.py  _template_utils.py  api.py  cli.py
databao/agents/: base.py
databao/caches/: disk_cache.py  in_mem_cache.py
databao/configs/: llm.py
databao/core/: __init__.py  (+11 more)
examples/: api-prototype.ipynb  api-prototype.py  demo.ipynb  demo.py  ecom-customers.ipynb  latency.py  marko.py  requirements.txt  test.ipynb  web_shop_orders_databao_example.ipynb
portus/: __init__.py  agent.py  api.py  data_executor.py  duck_db.py  executor.py  llms.py  meta_fetcher.py  pipe.py  result.py  session.py  sources.py  sql_gen.py  utils.py  vizualizer.py
prompts/: agent_system.jinja
streamlit_app/: app.py  suggestions.py
tests/: test_agent.py  test_config_utils.py  test_database_type_utils.py  test_demo_smoke.py  test_disk_cache.py  test_llms.py  test_schema_summary.py  test_session.py  test_sql_with_limit.py  test_text_frontend.py  test_vega_chat.py  test_visualisation_result.py
(+199 files in other folders)
